feat: textareaと送信ボタンの完成

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="row from">
               <p class="label-title is-fullWidth">出身</p>
-              <div class="from-contents is-halfWidth">
+              <div class="from-contents is-halfWidth select-area">
                 <label for="come-from" class="from-content">
                   <select name="come-from" id="come-from" class="from-select input-init input-area">
                     <option value="東京">東京</option>
@@ -128,6 +128,15 @@
                   </label>
                 </div>
               </div>
+            </div>
+
+            <div class="row remarks">
+              <p class="label-title">備考</p>
+              <textarea name="remarks" class="input-init input-area is-fullWidth" placeholder="何かあればご記入ください"></textarea>
+            </div>
+
+            <div class="row">
+              <input type="submit" value="アカウントの作成" class="input-init is-fullWidth button submit-btn">
             </div>
 
             <p class="agreement">アカウントを作成することにより、<a class="link-color" href>利用規約</a>と<a class="link-color" href>プライバシーポリシー</a>に同意するものとします。</p>
