add: 名前のname属性を追加

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="row name">
               <div class="is-halfWidth name-content">
                 <p class="label-title">名字 <span class="caution">※</span></p>
-                <input type="text" class="first-name input-init input-area" required>
+                <input type="text" class="input-init input-area" name="lastname" required>
               </div>
               <div class="is-halfWidth name-content">
                 <p class="label-title">名前 <span class="caution">※</span></p>
-                <input type="text" class="last-name input-init input-area" required>
+                <input type="text" class="input-init input-area" name="firstname" required>
               </div>
             </div>
 
