update: 不要な箇所の削除とcssのリファクタリング

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- 性別 -->
             <div class="sex row">
               <p class="label-title is-fullWidth">性別</p>
-              <div class="sex__inner">
+              <div class="sex__inner choice-font">
                 <label class="sex__content" for="male">
                   <input
                     type="radio"
@@ -156,7 +156,7 @@
               </p>
               <input
                 type="password"
-                name="re-pass"
+                name="re_pass"
                 class="input-init input-area"
                 required
               />
@@ -165,7 +165,7 @@
             <!-- コース選択 -->
             <div class="course row">
               <p class="label-title is-fullWidth">希望コース</p>
-              <div class="course__content">
+              <div class="course__content choice-font">
                 <input
                   type="checkbox"
                   name="course"
@@ -176,7 +176,7 @@
                   フロントエンド
                 </label>
               </div>
-              <div class="course__content">
+              <div class="course__content choice-font">
                 <input
                   type="checkbox"
                   name="course"
@@ -187,14 +187,14 @@
                   バックエンド
                 </label>
               </div>
-              <div class="course__content">
+              <div class="course__content choice-font">
                 <input
                   type="checkbox"
                   name="course"
-                  value="application"
-                  id="application"
+                  value="app"
+                  id="app"
                 />
-                <label for="application" class="course__content-text">
+                <label for="app" class="course__content-text">
                   アプリ
                 </label>
               </div>
