clean: インデントなど整理

--- a/index.html
+++ b/index.html
@@ -188,12 +188,7 @@
                 </label>
               </div>
               <div class="course__content choice-font">
-                <input
-                  type="checkbox"
-                  name="course"
-                  value="app"
-                  id="app"
-                />
+                <input type="checkbox" name="course" value="app" id="app" />
                 <label for="app" class="course__content-text">
                   アプリ
                 </label>
