clean: 不要な属性を削除

--- a/index.html
+++ b/index.html
@@ -63,31 +63,28 @@
             <div class="sex row">
               <p class="label-title is-fullWidth">性別</p>
               <div class="sex__inner choice-font">
-                <label class="sex__content" for="male">
+                <label class="sex__content">
                   <input
                     type="radio"
                     name="sex"
-                    id="male"
                     value="male"
                     class="sex__radio"
                   />
                   <span class="radio-circle">男性</span>
                 </label>
-                <label class="sex__content" for="female">
+                <label class="sex__content">
                   <input
                     type="radio"
                     name="sex"
-                    id="female"
                     value="female"
                     class="sex__radio"
                   />
                   <span class="radio-circle">女性</span>
                 </label>
-                <label class="sex__content" for="other">
+                <label class="sex__content">
                   <input
                     type="radio"
                     name="sex"
-                    id="other"
                     value="other"
                     class="sex__radio"
                   />
